--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
         * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; scroll-behavior: smooth; }
         body { background: var(--bg); color: #333; }
 
-        /* HEADER & NAVIGATION */
+        /* HEADER */
         header { background: white; padding: 15px 8%; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 10px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 1000; }
         .logo { font-size: 24px; font-weight: 800; color: var(--blue); text-decoration: none; }
         .lang-bar { display: flex; gap: 5px; }
-        .l-btn { padding: 5px 10px; border: 1.5px solid var(--blue); background: white; cursor: pointer; border-radius: 6px; font-weight: bold; font-size: 0.75rem; transition: 0.3s; }
+        .l-btn { padding: 5px 10px; border: 1.5px solid var(--blue); background: white; cursor: pointer; border-radius: 6px; font-weight: bold; font-size: 0.75rem; }
         .l-btn.active { background: var(--blue); color: white; }
 
-        /* HERO AREA */
+        /* BLUE HERO DESIGN */
         .container { max-width: 1100px; margin: 30px auto; padding: 0 20px; }
         .hero { background: var(--blue); color: white; padding: 60px 20px; border-radius: 35px; text-align: center; border-bottom: 8px solid var(--yellow); box-shadow: 0 15px 35px rgba(0,0,0,0.2); }
         .id-input { padding: 15px; width: 300px; border-radius: 12px; border: none; font-size: 1.2rem; text-align: center; margin: 20px 0; }
@@ -26,9 +26,9 @@
         .section-h { font-size: 1.8rem; color: var(--blue); margin: 50px 0 20px; border-left: 10px solid var(--yellow); padding-left: 15px; }
         .content-card { background: white; padding: 30px; border-radius: 25px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); margin-bottom: 30px; }
 
-        /* LIVE PULSE */
+        /* LIVE SECTION */
         .live-box { border: 2px solid #ff4d4d; display: flex; align-items: center; gap: 15px; padding: 20px; border-radius: 15px; background: #fffafa; }
-        .pulse { width: 12px; height: 12px; background: #ff4d4d; border-radius: 50%; box-shadow: 0 0 0 rgba(255,77,77, 0.4); animation: pulse 2s infinite; }
+        .pulse { width: 12px; height: 12px; background: #ff4d4d; border-radius: 50%; animation: pulse 2s infinite; }
         @keyframes pulse { 0% { box-shadow: 0 0 0 0px rgba(255,77,77, 0.7); } 70% { box-shadow: 0 0 0 10px rgba(255,77,77, 0); } 100% { box-shadow: 0 0 0 0px rgba(255,77,77, 0); } }
 
         /* GRID */
@@ -51,7 +51,7 @@
         <button class="l-btn" onclick="updateLang('en')" id="en-btn">EN</button>
         <button class="l-btn" onclick="updateLang('am')" id="am-btn">አማር</button>
         <button class="l-btn" onclick="updateLang('om')" id="om-btn">ORM</button>
-        <button class="l-btn" onclick="updateLang('ti')" id="ti-btn">TIG</button>
+        <button class="l-btn" onclick="updateLang('ti')" id="ti-btn">ትግር</button>
     </div>
 </header>
 
@@ -90,7 +90,7 @@
 <script>
     const dictionary = {
         en: { 
-            welcome: "Ethiopia's 2026 Digital Mission", sub: "Enter 10-Digit Fayda ID below to join a track", verify: "VERIFY", 
+            welcome: "Ethiopia's 2026 Digital Mission", sub: "Enter 10-Digit Fayda ID", verify: "VERIFY", 
             tracks: "Official Tracks", join: "JOIN MISSION", success: "Verified Member", reset: "Change ID",
             liveH: "Join Us Live", liveT: "Next Webinar: Digital Literacy", liveD: "Starts today at 4:00 PM. Don't miss out!", liveB: "Join Meeting",
             faqH: "Common Questions", q1: "What is Fayda ID?", a1: "It is the National Digital ID of Ethiopia.", q2: "Is it free?", a2: "Yes, all training is 100% free.",
@@ -98,7 +98,7 @@
             foot: "© 2026 ልማት Hub | Building Digital Ethiopia"
         },
         am: { 
-            welcome: "የኢትዮጵያ 2026 ዲጂታል ተልዕኮ", sub: "ትራክን ለመቀላቀል ባለ 10 አሃዝ የፋይዳ መታወቂያዎን ያስገቡ", verify: "አረጋግጥ", 
+            welcome: "የኢትዮጵያ 2026 ዲጂታል ተልዕኮ", sub: "ባለ 10 አሃዝ የፋይዳ መታወቂያ ያስገቡ", verify: "አረጋግጥ", 
             tracks: "ይፋዊ ትራኮች", join: "ተቀላቀል", success: "የተረጋገጠ አባል", reset: "መታወቂያ ቀይር",
             liveH: "በቀጥታ ይሳተፉ", liveT: "ቀጣይ ዌቢናር፡ ዲጂታል ማንበብና መጻፍ", liveD: "ዛሬ ከቀኑ 10፡00 ሰዓት ይጀምራል። እንዳያመልጥዎ!", liveB: "ስብሰባውን ይቀላቀሉ",
             faqH: "ተደጋጋሚ ጥያቄዎች", q1: "የፋይዳ መታወቂያ ምንድነው?", a1: "የኢትዮጵያ ብሄራዊ ዲጂታል መታወቂያ ነው።", q2: "ነፃ ነው?", a2: "አዎ፣ ሁሉም ስልጠናዎች 100% ነፃ ናቸው።",
@@ -106,7 +106,7 @@
             foot: "© 2026 ልማት Hub | ዲጂታል ኢትዮጵያን መገንባት"
         },
         om: { 
-            welcome: "Misiyoona Diijitaalaa 2026", sub: "Kallattii makkamuuf ID Faydaa diijitii 10 galchaa", verify: "MIRKANEESSI", 
+            welcome: "Misiyoona Diijitaalaa 2026", sub: "ID Faydaa diijitii 10 galchaa", verify: "MIRKANEESSI", 
             tracks: "Kallattiiwwan", join: "MAKKAMI", success: "Mirkaneeffameera", reset: "ID Jijjiiri",
             liveH: "Kallaattiin nu waliin ta'aa", liveT: "Webinar Itti Aanu: Beekumsa Diijitaalaa", liveD: "Har'a sa'aatii 10:00 irratti jalqaba. Hin dagatinaa!", liveB: "Walga'ii makkami",
             faqH: "Gaaffiiwwan Baramaa", q1: "ID Faydaa maali?", a1: "ID Diijitaalaa Biyyoolessaa Itoophiyaati.", q2: "Inni bilisaa?", a2: "Eeyyee, leenjiin hundi 100% bilisa.",
@@ -114,7 +114,7 @@
             foot: "© 2026 ልማት Hub | Itoophiyaa Diijitaalaa Ijaaruu"
         },
         ti: { 
-            welcome: "ዲጂታል ሚሽን 2026", sub: "ትራክ ንምጽንባር ባዓል 10 ኣሃዝ ፋይዳ መለለዪ የእትዉ", verify: "ኣረጋግፅ", 
+            welcome: "ዲጂታል ሚሽን 2026", sub: "ባዓል 10 ኣሃዝ ፋይዳ መለለዪ የእትዉ", verify: "ኣረጋግፅ", 
             tracks: "ዝተመረፁ ትራኮች", join: "ተሳተፍ", success: "ዝተረጋገፀ ኣባል", reset: "መለለዪ ቀይር",
             liveH: "ብቐጥታ ይሳተፉ", liveT: "ቀፃሊ ዌቢናር፡ ዲጂታል ማንብብን ምጽሓፍን", liveD: "ሎሚ ሰዓት 10፡00 ይጅምር። ከይመልኩም!", liveB: "ናብቲ ኣኼባ እተዉ",
             faqH: "ልሙዳት ሕቶታት", q1: "መለለዪ ፋይዳ እንታይ እዩ?", a1: "ናይ ኢትዮጵያ ሃገራዊ ዲጂታል መለለዪ እዩ።", q2: "ነፃ ድዩ?", a2: "እወ፣ ኩሉ ስልጠና 100% ነፃ እዩ።",
@@ -130,35 +130,26 @@
         localStorage.setItem('hubLang', lang);
         document.querySelectorAll('.l-btn').forEach(b => b.classList.remove('active'));
         document.getElementById(lang + '-btn').classList.add('active');
-        
         const d = dictionary[lang];
         
-        // Update Headers
         document.getElementById('h-tracks').innerText = d.tracks;
         document.getElementById('h-live').innerText = d.liveH;
         document.getElementById('h-faq').innerText = d.faqH;
         document.getElementById('h-contact').innerText = d.contactH;
-
-        // Update Live
         document.getElementById('live-title').innerText = d.liveT;
         document.getElementById('live-desc').innerText = d.liveD;
         document.getElementById('live-btn').innerText = d.liveB;
-
-        // Update Contact Form
         document.getElementById('f-name').placeholder = d.name;
         document.getElementById('f-email').placeholder = d.email;
         document.getElementById('f-msg').placeholder = d.msg;
         document.getElementById('f-btn').innerText = d.send;
+        document.getElementById('footer-text').innerText = d.foot;
 
-        // Update FAQ
         document.getElementById('faq-list').innerHTML = `
             <details style="margin-bottom:10px;"><summary style="font-weight:bold; cursor:pointer">${d.q1}</summary><p style="margin-top:5px; color:#666">${d.a1}</p></details>
             <details><summary style="font-weight:bold; cursor:pointer">${d.q2}</summary><p style="margin-top:5px; color:#666">${d.a2}</p></details>
         `;
 
-        document.getElementById('footer-text').innerText = d.foot;
-
-        // Update Hero
         const saved = localStorage.getItem('userEnroll');
         const hero = document.getElementById('hero-area');
         if (!saved) {
@@ -171,7 +162,6 @@
                 <button class="v-btn" style="margin-top:15px; background:rgba(255,255,255,0.2); border:1px solid white;" onclick="localStorage.removeItem('userEnroll'); updateLang('${lang}');">${d.reset}</button>`;
         }
 
-        // Update Tracks
         const grid = document.getElementById('track-grid');
         grid.innerHTML = "";
         trackList.forEach((t, i) => {
