--- a/index.html
+++ b/index.html
@@ -9,33 +9,36 @@
         * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; scroll-behavior: smooth; }
         body { background: var(--bg); overflow-x: hidden; }
 
-        /* HEADER & NAV */
+        /* HEADER */
         header { background: white; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 10px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 1000; }
         .logo { font-size: 24px; font-weight: 800; color: var(--blue); text-decoration: none; }
         nav { display: flex; gap: 20px; align-items: center; }
-        nav a { text-decoration: none; color: var(--blue); font-weight: 600; font-size: 0.9rem; }
+        nav a { text-decoration: none; color: var(--blue); font-weight: 600; font-size: 0.9rem; cursor: pointer; }
         .l-btn { padding: 5px 10px; border: 2px solid var(--blue); background: white; cursor: pointer; border-radius: 6px; font-weight: bold; margin-left: 5px; }
         .l-btn.active { background: var(--blue); color: white; }
 
-        /* YELLOW TRACKER */
+        /* TRACKERS */
         .yellow-tracker { background: var(--yellow); color: var(--blue); padding: 10px; font-weight: 800; overflow: hidden; white-space: nowrap; }
-        .scrolling-text { display: inline-block; animation: scroll 20s linear infinite; width: 100%; }
+        .scrolling-text { display: inline-block; animation: scroll 25s linear infinite; }
         @keyframes scroll { from { transform: translateX(100%); } to { transform: translateX(-100%); } }
 
-        /* HERO AREA */
+        /* HERO */
         .container { max-width: 1100px; margin: 20px auto; padding: 0 20px; }
-        .hero { background: var(--blue); color: white; border-radius: 30px; text-align: center; border-bottom: 8px solid var(--yellow); box-shadow: 0 15px 35px rgba(0,0,0,0.2); min-height: 300px; }
+        .hero { background: var(--blue); color: white; border-radius: 30px; text-align: center; border-bottom: 8px solid var(--yellow); box-shadow: 0 15px 35px rgba(0,0,0,0.2); min-height: 320px; display: flex; align-items: center; justify-content: center; }
         .id-input { padding: 15px; width: 280px; border-radius: 12px; border: none; font-size: 1.1rem; text-align: center; margin: 20px 0; }
         .v-btn { background: var(--yellow); color: var(--blue); border: none; padding: 15px 40px; border-radius: 12px; font-weight: 800; cursor: pointer; }
 
-        /* SECTIONS */
+        /* CONTENT */
         .section-h { font-size: 1.8rem; color: var(--blue); margin: 40px 0 20px; border-left: 10px solid var(--yellow); padding-left: 15px; }
-        .content-card { background: white; padding: 30px; border-radius: 25px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); margin-bottom: 30px; }
+        .content-card { background: white; padding: 25px; border-radius: 20px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); margin-bottom: 30px; }
         
-        /* GRID */
-        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 20px; }
-        .card { background: white; border-radius: 20px; overflow: hidden; box-shadow: 0 5px 15px rgba(0,0,0,0.05); text-align: center; }
-        .card img { width: 100%; height: 150px; object-fit: cover; }
+        /* GRID & FAQ */
+        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 15px; }
+        .card { background: white; border-radius: 15px; overflow: hidden; box-shadow: 0 5px 15px rgba(0,0,0,0.05); text-align: center; border: 1px solid #eee; }
+        .card img { width: 100%; height: 130px; object-fit: cover; }
+        .card-body { padding: 15px; }
+        details { padding: 15px; border-bottom: 1px solid #eee; cursor: pointer; text-align: left; }
+        summary { font-weight: bold; color: var(--blue); }
     </style>
 </head>
 <body>
@@ -45,9 +48,9 @@
     <nav>
         <a href="#tr-grid">Official Tracks</a>
         <a href="#h-faq">FAQ</a>
-        <a href="#">About Us</a>
+        <a onclick="showAbout()">About Us</a>
         <div class="lang-bar">
-            <button class="l-btn" onclick="setL('en')" id="en-btn">EN</button>
+            <button class="l-btn active" onclick="setL('en')" id="en-btn">EN</button>
             <button class="l-btn" onclick="setL('am')" id="am-btn">አማር</button>
             <button class="l-btn" onclick="setL('om')" id="om-btn">ORM</button>
             <button class="l-btn" onclick="setL('ti')" id="ti-btn">ትግር</button>
@@ -56,7 +59,7 @@
 </header>
 
 <div class="yellow-tracker">
-    <div class="scrolling-text" id="scroll-msg">New: Advanced AI Track is now open! | Join 942,000 citizens today.</div>
+    <div class="scrolling-text" id="scroll-msg">New: Advanced AI Track is now open! | Join 942,108 citizens today. | Digital Ethiopia Mission 2026.</div>
 </div>
 
 <div style="text-align:center; padding:10px; color:var(--blue); font-weight:bold;">
@@ -72,7 +75,7 @@
     <h2 class="section-h" id="h-li">Live Now</h2>
     <div class="content-card">
         <h3 id="lt" style="color:#ef4444">Digital Workshop</h3>
-        <p id="ld">Join to build your future</p>
+        <p id="ld" style="margin-top:5px;">Join to build your future and master digital tools.</p>
     </div>
 
     <h2 class="section-h" id="h-faq">FAQ</h2>
@@ -82,15 +85,24 @@
 <footer style="text-align:center; padding:40px; color:#888;" id="foot"></footer>
 
 <script>
-    // Stats Counter
+    // Stats & Data
     let c = 942108;
-    setInterval(() => { c += 1; document.getElementById('count').innerText = c.toLocaleString(); }, 3000);
+    setInterval(() => { c += 1; document.getElementById('count').innerText = c.toLocaleString(); }, 5000);
 
     const tracks = [
         {n: "AI Engineering", img: "https://images.unsplash.com/photo-1677442136019-21780ecad995?w=400"},
         {n: "Cyber Security", img: "https://images.unsplash.com/photo-1550751827-4bd374c3f58b?w=400"},
-        {n: "Web Dev", img: "https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=400"},
-        {n: "Data Science", img: "https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=400"}
+        {n: "Web Development", img: "https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=400"},
+        {n: "Data Science", img: "https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=400"},
+        {n: "Cloud Computing", img: "https://images.unsplash.com/photo-1544197150-b99a580bb7a8?w=400"}
+    ];
+
+    const faqs = [
+        {q: "What is Fayda ID?", a: "Fayda is the national digital ID of Ethiopia used for secure authentication."},
+        {q: "Is the training free?", a: "Yes, all 2026 Digital Mission tracks are fully funded and free for citizens."},
+        {q: "How do I enroll?", a: "Enter your 10-digit Fayda ID in the verification box above to start."},
+        {q: "Are certificates provided?", a: "Yes, professional digital certificates are awarded upon completion."},
+        {q: "Can I take multiple tracks?", a: "You can enroll in one primary track at a time to ensure focus."}
     ];
 
     const dict = {
@@ -105,15 +117,13 @@
         document.querySelectorAll('.l-btn').forEach(b => b.classList.remove('active'));
         document.getElementById(l+'-btn').classList.add('active');
 
-        // FIXED HERO SECTION INJECTION
         document.getElementById('hero').innerHTML = `
-            <div style="padding: 60px 20px;">
+            <div style="padding: 40px;">
                 <h1>${d.w}</h1>
-                <p style="margin: 15px 0;">${d.s}</p>
+                <p style="margin: 15px 0; font-weight:600;">${d.s}</p>
                 <input type="number" id="f-id" class="id-input" placeholder="0000000000"><br>
                 <button onclick="enroll()" class="v-btn">${d.v}</button>
-            </div>
-        `;
+            </div>`;
 
         document.getElementById('h-tr').innerText = d.tr;
         document.getElementById('h-faq').innerText = d.fq;
@@ -121,13 +131,18 @@
 
         const g = document.getElementById('tr-grid'); g.innerHTML = "";
         tracks.forEach(t => {
-            g.innerHTML += `<div class="card"><img src="${t.img}"><div class="card-body"><h3>${t.n}</h3></div></div>`;
+            g.innerHTML += `<div class="card"><img src="${t.img}"><div class="card-body"><h4 style="color:#003973">${t.n}</h4></div></div>`;
         });
 
-        document.getElementById('faq-list').innerHTML = `<details><summary>${d.fq} #1</summary><p>Mission 2026 Details.</p></details>`;
+        const f = document.getElementById('faq-list'); f.innerHTML = "";
+        faqs.forEach(item => {
+            f.innerHTML += `<details><summary>${item.q}</summary><p style="padding-top:10px; color:#555;">${item.a}</p></details>`;
+        });
     }
 
-    function enroll() { alert("Enrolled!"); }
+    function showAbout() { alert("ልማት Hub is Ethiopia's premier digital learning platform, empowering 1 million citizens by 2026."); }
+    function enroll() { if(document.getElementById('f-id').value.length !== 10) { alert("Please enter a valid 10-digit ID"); return; } alert("Verification Successful! Redirecting to your track..."); }
+    
     setL('en');
 </script>
 </body>
