--- a/index.html
+++ b/index.html
@@ -3,40 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | Official 2026</title>
+    <title>ልማት Hub | Final 2026</title>
     <style>
         :root { --blue: #003973; --yellow: #FFD700; --bg: #f4f7f9; }
-        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; scroll-behavior: smooth; }
-        body { background: var(--bg); overflow-x: hidden; }
-
-        /* HEADER */
+        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; }
+        body { background: var(--bg); color: #333; }
         header { background: white; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 10px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 1000; }
         .logo { font-size: 24px; font-weight: 800; color: var(--blue); text-decoration: none; }
-        nav { display: flex; gap: 20px; align-items: center; }
+        nav { display: flex; gap: 15px; align-items: center; }
         nav a { text-decoration: none; color: var(--blue); font-weight: 600; font-size: 0.9rem; cursor: pointer; }
-        .l-btn { padding: 5px 10px; border: 2px solid var(--blue); background: white; cursor: pointer; border-radius: 6px; font-weight: bold; margin-left: 5px; }
+        .l-btn { padding: 5px 8px; border: 2px solid var(--blue); background: white; cursor: pointer; border-radius: 6px; font-weight: bold; }
         .l-btn.active { background: var(--blue); color: white; }
-
-        /* TRACKERS */
         .yellow-tracker { background: var(--yellow); color: var(--blue); padding: 10px; font-weight: 800; overflow: hidden; white-space: nowrap; }
-        .scrolling-text { display: inline-block; animation: scroll 25s linear infinite; }
+        .scrolling-text { display: inline-block; animation: scroll 20s linear infinite; }
         @keyframes scroll { from { transform: translateX(100%); } to { transform: translateX(-100%); } }
-
-        /* HERO */
         .container { max-width: 1100px; margin: 20px auto; padding: 0 20px; }
-        .hero { background: var(--blue); color: white; border-radius: 30px; text-align: center; border-bottom: 8px solid var(--yellow); box-shadow: 0 15px 35px rgba(0,0,0,0.2); min-height: 320px; display: flex; align-items: center; justify-content: center; }
+        .hero { background: var(--blue); color: white; border-radius: 30px; text-align: center; border-bottom: 8px solid var(--yellow); padding: 50px 20px; }
         .id-input { padding: 15px; width: 280px; border-radius: 12px; border: none; font-size: 1.1rem; text-align: center; margin: 20px 0; }
         .v-btn { background: var(--yellow); color: var(--blue); border: none; padding: 15px 40px; border-radius: 12px; font-weight: 800; cursor: pointer; }
-
-        /* CONTENT */
         .section-h { font-size: 1.8rem; color: var(--blue); margin: 40px 0 20px; border-left: 10px solid var(--yellow); padding-left: 15px; }
-        .content-card { background: white; padding: 25px; border-radius: 20px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); margin-bottom: 30px; }
-        
-        /* GRID & FAQ */
-        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 15px; }
-        .card { background: white; border-radius: 15px; overflow: hidden; box-shadow: 0 5px 15px rgba(0,0,0,0.05); text-align: center; border: 1px solid #eee; }
-        .card img { width: 100%; height: 130px; object-fit: cover; }
-        .card-body { padding: 15px; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 20px; }
+        .card { background: white; border-radius: 15px; overflow: hidden; box-shadow: 0 5px 15px rgba(0,0,0,0.1); text-align: center; border: 1px solid #ddd; }
+        .card img { width: 100%; height: 140px; object-fit: cover; }
+        .card-body { padding: 15px; font-weight: bold; color: var(--blue); }
+        .faq-card { background: white; padding: 10px 20px; border-radius: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); }
         details { padding: 15px; border-bottom: 1px solid #eee; cursor: pointer; text-align: left; }
         summary { font-weight: bold; color: var(--blue); }
     </style>
@@ -46,9 +36,9 @@
 <header>
     <a href="#" class="logo">ልማት Hub</a>
     <nav>
-        <a href="#tr-grid">Official Tracks</a>
+        <a href="#tr-grid">Tracks</a>
         <a href="#h-faq">FAQ</a>
-        <a onclick="showAbout()">About Us</a>
+        <a onclick="alert('Digital Ethiopia 2026: Empowering 1 Million Citizens.')">About Us</a>
         <div class="lang-bar">
             <button class="l-btn active" onclick="setL('en')" id="en-btn">EN</button>
             <button class="l-btn" onclick="setL('am')" id="am-btn">አማር</button>
@@ -59,10 +49,10 @@
 </header>
 
 <div class="yellow-tracker">
-    <div class="scrolling-text" id="scroll-msg">New: Advanced AI Track is now open! | Join 942,108 citizens today. | Digital Ethiopia Mission 2026.</div>
+    <div class="scrolling-text">New: Advanced AI Track is now open! | Join 942,108 citizens today. | Digital Ethiopia Mission 2026.</div>
 </div>
 
-<div style="text-align:center; padding:10px; color:var(--blue); font-weight:bold;">
+<div style="text-align:center; padding:10px; font-weight:bold;">
     Active Citizens: <span id="count" style="color:#ef4444">942,108</span>
 </div>
 
@@ -72,23 +62,13 @@
     <h2 class="section-h" id="h-tr">Official Tracks</h2>
     <div class="grid" id="tr-grid"></div>
 
-    <h2 class="section-h" id="h-li">Live Now</h2>
-    <div class="content-card">
-        <h3 id="lt" style="color:#ef4444">Digital Workshop</h3>
-        <p id="ld" style="margin-top:5px;">Join to build your future and master digital tools.</p>
-    </div>
-
     <h2 class="section-h" id="h-faq">FAQ</h2>
-    <div class="content-card" id="faq-list"></div>
+    <div class="faq-card" id="faq-list"></div>
 </div>
 
-<footer style="text-align:center; padding:40px; color:#888;" id="foot"></footer>
+<footer style="text-align:center; padding:40px; color:#888;">© 2026 ልማት Hub</footer>
 
 <script>
-    // Stats & Data
-    let c = 942108;
-    setInterval(() => { c += 1; document.getElementById('count').innerText = c.toLocaleString(); }, 5000);
-
     const tracks = [
         {n: "AI Engineering", img: "https://images.unsplash.com/photo-1677442136019-21780ecad995?w=400"},
         {n: "Cyber Security", img: "https://images.unsplash.com/photo-1550751827-4bd374c3f58b?w=400"},
@@ -98,18 +78,18 @@
     ];
 
     const faqs = [
-        {q: "What is Fayda ID?", a: "Fayda is the national digital ID of Ethiopia used for secure authentication."},
-        {q: "Is the training free?", a: "Yes, all 2026 Digital Mission tracks are fully funded and free for citizens."},
-        {q: "How do I enroll?", a: "Enter your 10-digit Fayda ID in the verification box above to start."},
-        {q: "Are certificates provided?", a: "Yes, professional digital certificates are awarded upon completion."},
-        {q: "Can I take multiple tracks?", a: "You can enroll in one primary track at a time to ensure focus."}
+        {q: "What is Fayda ID?", a: "Fayda is the national digital ID for Ethiopia."},
+        {q: "Is it free?", a: "Yes, all training tracks are 100% free for citizens."},
+        {q: "How to enroll?", a: "Enter your 10-digit Fayda ID in the box above."},
+        {q: "Are there certificates?", a: "Yes, you get a digital certificate after completion."},
+        {q: "Can I take 2 tracks?", a: "You can take one track at a time."}
     ];
 
     const dict = {
-        en: {w:"Digital Mission 2026", s:"Enter 10-Digit Fayda ID", v:"VERIFY", tr:"Official Tracks", fq:"FAQ", ft:"© 2026 ልማት Hub"},
-        am: {w:"ዲጂታል ተልዕኮ 2026", s:"ባለ 10 አሃዝ የፋይዳ መታወቂያ", v:"አረጋግጥ", tr:"ይፋዊ ትራኮች", fq:"ጥያቄዎች", ft:"© 2026 ልማት Hub"},
-        om: {w:"Misiyoona Diijitaalaa 2026", s:"ID Faydaa galchaa", v:"MIRKANEESSI", tr:"Kallattiiwwan", fq:"Gaaffii", ft:"© 2026 ልማት Hub"},
-        ti: {w:"ዲጂታል ሚሽን 2026", s:"መለለዪ ፋይዳ የእትዉ", v:"ኣረጋግፅ", tr:"ዝተመረፁ ትራኮች", fq:"ሕቶታት", ft:"© 2026 ልማት Hub"}
+        en: {w:"Digital Mission 2026", s:"Enter 10-Digit Fayda ID", v:"VERIFY", tr:"Official Tracks", fq:"FAQ"},
+        am: {w:"ዲጂታል ተልዕኮ 2026", s:"ባለ 10 አሃዝ የፋይዳ መታወቂያ", v:"አረጋግጥ", tr:"ይፋዊ ትራኮች", fq:"ጥያቄዎች"},
+        om: {w:"Misiyoona Diijitaalaa 2026", s:"ID Faydaa galchaa", v:"MIRKANEESSI", tr:"Kallattiiwwan", fq:"Gaaffii"},
+        ti: {w:"ዲጂታል ሚሽን 2026", s:"መለለዪ ፋይዳ የእትዉ", v:"ኣረጋግፅ", tr:"ዝተመረፁ ትራኮች", fq:"ሕቶታት"}
     };
 
     function setL(l) {
@@ -117,32 +97,29 @@
         document.querySelectorAll('.l-btn').forEach(b => b.classList.remove('active'));
         document.getElementById(l+'-btn').classList.add('active');
 
+        // FORCE HERO CONTENT
         document.getElementById('hero').innerHTML = `
-            <div style="padding: 40px;">
-                <h1>${d.w}</h1>
-                <p style="margin: 15px 0; font-weight:600;">${d.s}</p>
-                <input type="number" id="f-id" class="id-input" placeholder="0000000000"><br>
-                <button onclick="enroll()" class="v-btn">${d.v}</button>
-            </div>`;
+            <h1>${d.w}</h1>
+            <p style="margin: 15px 0;">${d.s}</p>
+            <input type="number" id="f-id" class="id-input" placeholder="0000000000"><br>
+            <button onclick="alert('Success!')" class="v-btn">${d.v}</button>`;
+
+        // FORCE TRACKS TO LOAD
+        const g = document.getElementById('tr-grid'); g.innerHTML = "";
+        tracks.forEach(t => {
+            g.innerHTML += `<div class="card"><img src="${t.img}"><div class="card-body">${t.n}</div></div>`;
+        });
+
+        // FORCE FAQ TO LOAD
+        const f = document.getElementById('faq-list'); f.innerHTML = "";
+        faqs.forEach(item => {
+            f.innerHTML += `<details><summary>${item.q}</summary><p style="padding-top:10px;">${item.a}</p></details>`;
+        });
 
         document.getElementById('h-tr').innerText = d.tr;
         document.getElementById('h-faq').innerText = d.fq;
-        document.getElementById('foot').innerText = d.ft;
-
-        const g = document.getElementById('tr-grid'); g.innerHTML = "";
-        tracks.forEach(t => {
-            g.innerHTML += `<div class="card"><img src="${t.img}"><div class="card-body"><h4 style="color:#003973">${t.n}</h4></div></div>`;
-        });
-
-        const f = document.getElementById('faq-list'); f.innerHTML = "";
-        faqs.forEach(item => {
-            f.innerHTML += `<details><summary>${item.q}</summary><p style="padding-top:10px; color:#555;">${item.a}</p></details>`;
-        });
     }
 
-    function showAbout() { alert("ልማት Hub is Ethiopia's premier digital learning platform, empowering 1 million citizens by 2026."); }
-    function enroll() { if(document.getElementById('f-id').value.length !== 10) { alert("Please enter a valid 10-digit ID"); return; } alert("Verification Successful! Redirecting to your track..."); }
-    
     setL('en');
 </script>
 </body>
